--- a/index.html
+++ b/index.html
@@ -69,14 +69,18 @@
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
             </p>          
       </main>         
-      <footer class="footer px-2 py-2" id="page-footer">
-        <p>
-            Create Mor
-        </p>
+    <footer class="footer p-2 d-flex justify-content-between" id="page-footer">
+        <ul class="d-flex navbar-nav">
+            <li class="nav-item d-inline-block">Sitemap</li>            
+        </ul>
+        <ul class="d-flex justify-content-end navbar-nav">            
+            <li class="nav-item d-inline-block">About Us</li>
+            <li class="nav-item d-inline-block">Content</li>
+        </ul>
       </footer>
-      <!-- <footer class="footer d-flex justify-content-center px-2" id="page-footer">
-        <p>Create Mor</p>
-      </footer> -->
+   
+
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
