--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
             </p>          
       </main>         
-    <footer class="footer p-2 d-flex justify-content-between" id="page-footer">
-        <ul class="d-flex navbar-nav">
-            <li class="nav-item d-inline-block">Sitemap</li>            
-        </ul>
-        <ul class="d-flex justify-content-end navbar-nav">            
-            <li class="nav-item d-inline-block">About Us</li>
-            <li class="nav-item d-inline-block">Content</li>
-        </ul>
+    <footer class="footer p-2 container-fluid" id="page-footer">
+        <div class="row d-flex justify-content-between">
+            <ul class="col-2 d-flex">
+                <li class="nav-item d-inline-block">Sitemap</li>            
+            </ul>
+            <ul class="col-2 d-flex">            
+                <li class="nav-item d-inline-block">About Us</li>
+                <li class="nav-item d-inline-block">Content</li>
+            </ul>
+        </div>       
       </footer>
    
 
