--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="assets/css/site.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar py-4 shadow-sm sticky-top" id="navbar-custom">
-        <div class="container-fluid">
+    <nav class="navbar py-4 shadow-sm fixed-top" id="navbar-custom">
+        <div class="container-fluid d-flex justify-content-between w-100">
             <div class="row d-flex justify-content-between">
                 <div class="col-md-2">
                     <a class="navbar-brand" id="navbar-logo" href="index.html">Create Mor</a>
@@ -26,7 +26,7 @@
                     </form>
                 </div>
                
-                <div class="col-md-2 d-flex">
+                <div class="col-md-2 d-flex justify-content-end">
                     <a class="btn btn-outline navbar-btn-cust" href="#" role="button">
                         Shopping Cart
                     </a>
