--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="container-fluid d-flex justify-content-between w-100">
             <div class="row d-flex justify-content-between">
                 <div class="col-md-2">
-                    <a class="navbar-brand" id="navbar-logo" href="index.html">Create Mor</a>
-                    <button class="btn btn-outline dropdown-toggle col-md-1 navbar-btn-cust">
+                    <a class="navbar-brand w-50" id="navbar-logo" href="index.html">Create Mor</a>
+                    <a class="btn btn-outline dropdown-toggle navbar-btn-cust w-50" >
                         Catalog
-                    </button>
+                    </a>
                 </div>
                 <div class="col-md-8">
                     <form class="container-fluid d-flex">
@@ -37,7 +37,7 @@
             </div>         
         </div>
       </nav>
-      <main class="container-fluid pt-2 min-vh-100" id="main-content">
+      <main class="container-fluid pt-4 min-vh-100" id="main-content">
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
             </p>
