--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="assets/css/site.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar py-4 shadow-sm fixed-top" id="navbar-custom">
+    <nav class="navbar py-4 shadow-sm sticky-top" id="navbar-custom">
         <div class="container-fluid d-flex justify-content-between w-100">
             <div class="row d-flex justify-content-between">
                 <div class="col-md-2">
