about us page update

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
       <main class="container-fluid m-0 p-0" id="main-content">      
         <div class="row w-100 m-0 p-0">         
            <div class="col">
-               <div style="height: 400px; overflow: hidden;">
+               <div class="overflow-hidden" id="about-header">
                     <img class="img-fluid" src="assets/images/header-img.jpeg">
                </div>              
            </div>
@@ -51,13 +51,13 @@
             <hr>
             <h2>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, non doloremque dolorem tempora sit odio explicabo, aliquid praesentium id, quaerat in tempore? Ad mollitia soluta a repellendus, porro quis voluptate."</h2>
         </div>
-       <article class="container">
+       <article class="container-fluid w-75">
            <div class="row">
             <p class="col">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis debitis nostrum aperiam consequuntur. Accusamus eaque dolorem sed, saepe ullam ad explicabo est enim delectus omnis, deserunt quis corrupti pariatur modi!</p>
             <p class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde debitis quidem magni asperiores quia harum consectetur sint praesentium. Exercitationem pariatur quo cumque porro nulla assumenda voluptatem earum reprehenderit dolores.</p>
            </div>
         </article>
-        <figure class="w-75 mx-auto" style="height: 400px; overflow: hidden;">
+        <figure class="w-75 overflow-hidden mx-auto" id="about-art-img">
             <img class="img-fluid" src="http://placekitten.com/g/400/100" alt="about-article-img">
         </figure>      
       </main>         
