--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <nav class="navbar py-4 shadow-sm sticky-top" id="navbar-custom">
         <div class="container-fluid d-flex justify-content-between w-100">
             <div class="row d-flex justify-content-between">
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <a class="navbar-brand w-50" id="navbar-logo" href="index.html">Create Mor</a>
                     <a class="btn btn-outline dropdown-toggle navbar-btn-cust w-50" >
                         Catalog
                     </a>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-6">
                     <form class="container-fluid d-flex">
                         <input class="form-control w-75 rounded-pill" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success w-25 rounded-pill" type="submit">Search</button>                       
@@ -69,17 +69,18 @@
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
             </p>          
       </main>         
-    <footer class="footer p-2 container-fluid" id="page-footer">
+      <footer class="footer p-2 container-fluid" id="page-footer">
         <div class="row d-flex justify-content-between">
             <ul class="col-2 d-flex">
                 <li class="nav-item d-inline-block">Sitemap</li>            
             </ul>
-            <ul class="col-2 d-flex">            
+            <ul class="col-2 d-flex text-end">            
                 <li class="nav-item d-inline-block">About Us</li>
                 <li class="nav-item d-inline-block">Content</li>
             </ul>
         </div>       
       </footer>
+   
    
 
     
