about us page update

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     </form>
                 </div>
                
-                <div class="col-md-2 d-flex justify-content-end">
-                    <a class="btn btn-outline navbar-btn-cust" href="#" role="button">
+                <div class="navbar-nav col-2 d-flex flex-row justify-content-end">                   
+                    <a class="nav-link navbar-btn-cust  text-end" href="#" role="button">
                         Shopping Cart
-                    </a>
-                    <a class="btn btn-outline navbar-btn-cust" href="#" role="button">
+                    </a>                
+                    <a class="nav-link navbar-btn-cust  text-end" href="#" role="button">
                         Log In
                     </a>
                 </div>
