navbar footer update

--- a/about.html
+++ b/about.html
@@ -26,11 +26,11 @@
                     </form>
                 </div>
                
-                <div class="col-md-2 d-flex justify-content-end">
-                    <a class="btn btn-outline navbar-btn-cust" href="#" role="button">
+                <div class="navbar-nav col-2 d-flex flex-row justify-content-end">                   
+                    <a class="nav-link navbar-btn-cust  text-end" href="#" role="button">
                         Shopping Cart
-                    </a>
-                    <a class="btn btn-outline navbar-btn-cust" href="#" role="button">
+                    </a>                
+                    <a class="nav-link navbar-btn-cust  text-end" href="#" role="button">
                         Log In
                     </a>
                 </div>
@@ -61,7 +61,7 @@
             <img class="img-fluid" src="http://placekitten.com/g/400/100" alt="about-article-img">
         </figure>      
       </main>         
-    <footer class="footer p-2 container-fluid" id="page-footer">
+      <footer class="footer p-2 container-fluid" id="page-footer">
         <div class="row d-flex justify-content-between">
             <ul class="col-2 d-flex">
                 <li class="nav-item d-inline-block">Sitemap</li>            
@@ -72,6 +72,7 @@
             </ul>
         </div>       
       </footer>
+   
    
 
     
