--- a/about.html
+++ b/about.html
@@ -59,7 +59,20 @@
         </article>
         <figure class="w-75 overflow-hidden mx-auto" id="about-art-img">
             <img class="img-fluid" src="http://placekitten.com/g/400/100" alt="about-article-img">
-        </figure>      
+        </figure>
+        <article class="container-fluid w-75">
+            <div class="row">
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus earum omnis delectus illum cum animi reprehenderit tempora numquam, harum laudantium aspernatur dolore obcaecati atque expedita sunt mollitia assumenda ea veniam.</p>
+                </div>
+                <div class="col">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus blanditiis, veniam quaerat atque neque quis harum minus impedit voluptatum laborum beatae natus quibusdam fuga tenetur cupiditate odit veritatis eius deleniti.</p>
+                </div>
+                <div class="col">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ullam et architecto quibusdam, in nisi ducimus quos ratione magnam expedita id dolorem quia explicabo similique unde? Ab alias ex reprehenderit!</p>
+                </div>
+            </div>
+        </article>      
       </main>         
       <footer class="footer p-2 container-fluid" id="page-footer">
         <div class="row d-flex justify-content-between">
