--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </ul>
             <ul class="col-2 d-flex text-end">            
                 <li class="nav-item d-inline-block">About Us</li>
-                <li class="nav-item d-inline-block">Content</li>
+                <li class="nav-item d-inline-block">Contact</li>
             </ul>
         </div>       
       </footer>
