--- a/index.html
+++ b/index.html
@@ -72,11 +72,23 @@
       <footer class="footer p-2 container-fluid" id="page-footer">
         <div class="row d-flex justify-content-between">
             <ul class="col-2 d-flex">
-                <li class="nav-item d-inline-block">Sitemap</li>            
+                <li class="nav-item d-inline-block">
+                    <a class="nav-link" href="#">
+                        About Us
+                    </a>
+                </li>            
             </ul>
             <ul class="col-2 d-flex text-end">            
-                <li class="nav-item d-inline-block">About Us</li>
-                <li class="nav-item d-inline-block">Contact</li>
+                <li class="nav-item d-inline-block">
+                    <a class="nav-link" href="about.html">
+                        About Us
+                    </a>
+                </li>
+                <li class="nav-item d-inline-block">
+                    <a class="nav-link" href="#">
+                        About Us
+                    </a>
+                </li>
             </ul>
         </div>       
       </footer>
