--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         <div class="row w-100 m-0 p-0">         
            <div class="col">
                <div class="overflow-hidden" id="about-header">
-                    <img class="img-fluid" src="assets/images/header-img.jpeg">
+                    <img class="img-fluid" src="https://images.unsplash.com/photo-1559724551-9f8b249ae5a8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
                </div>              
            </div>
         </div>
@@ -53,35 +53,89 @@
         </div>
        <article class="container-fluid w-75">
            <div class="row">
-            <p class="col">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis debitis nostrum aperiam consequuntur. Accusamus eaque dolorem sed, saepe ullam ad explicabo est enim delectus omnis, deserunt quis corrupti pariatur modi!</p>
-            <p class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae unde debitis quidem magni asperiores quia harum consectetur sint praesentium. Exercitationem pariatur quo cumque porro nulla assumenda voluptatem earum reprehenderit dolores.</p>
+            <p class="col">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis debitis nostrum aperiam consequuntur. Accusamus eaque dolorem sed, saepe ullam ad explicabo est enim delectus omnis, deserunt quis corrupti pariatur modi!</p>            
            </div>
         </article>
-        <figure class="w-75 overflow-hidden mx-auto" id="about-art-img">
-            <img class="img-fluid" src="http://placekitten.com/g/400/100" alt="about-article-img">
-        </figure>
-        <article class="container-fluid w-75">
-            <div class="row">
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus earum omnis delectus illum cum animi reprehenderit tempora numquam, harum laudantium aspernatur dolore obcaecati atque expedita sunt mollitia assumenda ea veniam.</p>
+        <div class="container-fluid w-75 text-center d-flex align-items-center" id="about-art-img">
+            <h2 class="text-white display-4 align-middle">Meet our team</h2>
+        </div>
+        <section class="container-fluid w-75 mt-5">
+            <div id="teamProfileSlides" class="carousel slide w-auto" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#teamProfileSlides" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#teamProfileSlides" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#teamProfileSlides" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#teamProfileSlides" data-bs-slide-to="2" aria-label="Slide 4"></button>
+                  <button type="button" data-bs-target="#teamProfileSlides" data-bs-slide-to="2" aria-label="Slide 5"></button>
                 </div>
-                <div class="col">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus blanditiis, veniam quaerat atque neque quis harum minus impedit voluptatum laborum beatae natus quibusdam fuga tenetur cupiditate odit veritatis eius deleniti.</p>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="http://placekitten.com/g/300/100" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="http://placekitten.com/g/300/100" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="http://placekitten.com/g/300/100" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="http://placekitten.com/g/300/100" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="http://placekitten.com/g/300/100" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
                 </div>
-                <div class="col">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ullam et architecto quibusdam, in nisi ducimus quos ratione magnam expedita id dolorem quia explicabo similique unde? Ab alias ex reprehenderit!</p>
-                </div>
-            </div>
-        </article>      
+                <button class="carousel-control-prev" type="button" data-bs-target="#teamProfileSlides" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#teamProfileSlides" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>      
       </main>         
       <footer class="footer p-2 container-fluid" id="page-footer">
         <div class="row d-flex justify-content-between">
             <ul class="col-2 d-flex">
-                <li class="nav-item d-inline-block">Sitemap</li>            
+                <li class="nav-item d-inline-block">
+                    <a class="nav-link" href="#">
+                        About Us
+                    </a>
+                </li>            
             </ul>
             <ul class="col-2 d-flex text-end">            
-                <li class="nav-item d-inline-block">About Us</li>
-                <li class="nav-item d-inline-block">Contact</li>
+                <li class="nav-item d-inline-block">
+                    <a class="nav-link" href="about.html">
+                        About Us
+                    </a>
+                </li>
+                <li class="nav-item d-inline-block">
+                    <a class="nav-link" href="#">
+                        About Us
+                    </a>
+                </li>
             </ul>
         </div>       
       </footer>
