--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
             <ul class="col-2 d-flex">
                 <li class="nav-item d-inline-block">
                     <a class="nav-link" href="#">
-                        About Us
+                       Sitemap
                     </a>
                 </li>            
             </ul>
@@ -133,7 +133,7 @@
                 </li>
                 <li class="nav-item d-inline-block">
                     <a class="nav-link" href="#">
-                        About Us
+                        Contact
                     </a>
                 </li>
             </ul>
