--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <ul class="col-2 d-flex">
                 <li class="nav-item d-inline-block">
                     <a class="nav-link" href="#">
-                        About Us
+                       Sitemap
                     </a>
                 </li>            
             </ul>
@@ -86,7 +86,7 @@
                 </li>
                 <li class="nav-item d-inline-block">
                     <a class="nav-link" href="#">
-                        About Us
+                        Contact
                     </a>
                 </li>
             </ul>
