--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <div class="container-fluid d-flex justify-content-between w-100">
             <div class="row d-flex justify-content-between">
                 <div class="col-md-3">
-                    <a class="navbar-brand w-50" id="navbar-logo" href="index.html">Create Mor</a>
+                    <a class="navbar-brand w-50" id="navbar-logo" href="index.html">
+                        CreatMOR
+                    </a>
                     <a class="btn btn-outline dropdown-toggle navbar-btn-cust w-50" >
                         Catalog
                     </a>
