--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container-fluid d-flex justify-content-between w-100">
             <div class="row d-flex justify-content-between">
                 <div class="col-md-3">
-                    <a class="navbar-brand w-50" id="navbar-logo" href="index.html">
-                        CreatMOR
+                    <a class="navbar-brand w-25" id="navbar-logo" href="index.html">
+                        <img src="assets/images/main-logo.svg" class="img-fluid" alt="logo">
                     </a>
                     <a class="btn btn-outline dropdown-toggle navbar-btn-cust w-50" >
                         Catalog
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-md-6">
                     <form class="container-fluid d-flex">
-                        <input class="form-control w-75 rounded-pill" type="search" placeholder="Search" aria-label="Search">
+                        <input class="form-control w-75 h-50 rounded-pill" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success w-25 rounded-pill" type="submit">Search</button>                       
                     </form>
                 </div>
