icons added, about page modified

--- a/dummy.html
+++ b/dummy.html
@@ -10,9 +10,9 @@
     <link href="assets/css/site.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar py-4 shadow-sm sticky-top" id="navbar-custom">
+    <nav class="navbar py-4 w-100 shadow-sm sticky-top" id="navbar-custom">
         <div class="container-fluid d-flex justify-content-between w-100">
-            <div class="row d-flex justify-content-between">
+            <div class="row w-100 d-flex justify-content-between">
                 <div class="col-md-3">
                     <a class="navbar-brand w-25" id="navbar-logo" href="index.html">
                         <img src="assets/images/main-logo.svg" class="img-fluid" alt="logo">
@@ -29,16 +29,16 @@
                 </div>
                
                 <div class="navbar-nav col-2 d-flex flex-row justify-content-end">                   
-                    <a class="nav-link navbar-btn-cust  text-end" href="#" role="button">
-                        Shopping Cart
+                    <a class="nav-link navbar-btn-cust text-end me-5" href="#" role="button">
+                      <i class="bi bi-cart"></i>
                     </a>                
-                    <a class="nav-link navbar-btn-cust  text-end" href="#" role="button">
-                        Log In
+                    <a class="nav-link navbar-btn-cust text-end" href="#" role="button">
+                      <i class="bi bi-person-fill"></i>Log In
                     </a>
                 </div>
             </div>         
         </div>
-      </nav>
+      </nav> 
       <main class="container-fluid pt-4 min-vh-100" id="main-content">
            
         <!-- YOUR CONTENT GOES HERE!-->    
