--- a/index.html
+++ b/index.html
@@ -7,72 +7,99 @@
     <title>Index</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <link href="assets/css/site.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar py-4 shadow-sm sticky-top" id="navbar-custom">
-        <div class="container-fluid d-flex justify-content-between w-100">
-            <div class="row d-flex justify-content-between">
-                <div class="col-md-3">
-                    <a class="navbar-brand w-25" id="navbar-logo" href="index.html">
-                        <img src="assets/images/main-logo.svg" class="img-fluid" alt="logo">
-                    </a>
-                    <a class="btn btn-outline dropdown-toggle navbar-btn-cust w-50" >
-                        Catalog
-                    </a>
-                </div>
-                <div class="col-md-6">
-                    <form class="container-fluid d-flex">
-                        <input class="form-control w-75 h-50 rounded-pill" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success w-25 rounded-pill" type="submit">Search</button>                       
-                    </form>
-                </div>
-               
-                <div class="navbar-nav col-2 d-flex flex-row justify-content-end">                   
-                    <a class="nav-link navbar-btn-cust  text-end" href="#" role="button">
-                        Shopping Cart
-                    </a>                
-                    <a class="nav-link navbar-btn-cust  text-end" href="#" role="button">
-                        Log In
-                    </a>
-                </div>
-            </div>         
-        </div>
-      </nav>
+  <nav class="navbar py-4 w-100 shadow-sm sticky-top" id="navbar-custom">
+    <div class="container-fluid d-flex justify-content-between w-100">
+        <div class="row w-100 d-flex justify-content-between">
+            <div class="col-md-3">
+                <a class="navbar-brand w-25" id="navbar-logo" href="index.html">
+                    <img src="assets/images/main-logo.svg" class="img-fluid" alt="logo">
+                </a>
+                <a class="btn btn-outline dropdown-toggle navbar-btn-cust w-50" >
+                    Catalog
+                </a>
+            </div>
+            <div class="col-md-6">
+                <form class="container-fluid d-flex">
+                    <input class="form-control w-75 h-50 rounded-pill" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success w-25 rounded-pill" type="submit">Search</button>                       
+                </form>
+            </div>
+           
+            <div class="navbar-nav col-2 d-flex flex-row justify-content-end">                   
+                <a class="nav-link navbar-btn-cust text-end me-5" href="#" role="button">
+                  <i class="bi bi-cart"></i>
+                </a>                
+                <a class="nav-link navbar-btn-cust text-end" href="#" role="button">
+                  <i class="bi bi-person-fill"></i>Log In
+                </a>
+            </div>
+        </div>         
+    </div>
+  </nav> 
       <main class="container-fluid pt-4 min-vh-100" id="main-content">
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
-            </p>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ea ratione magnam accusamus consectetur quam cupiditate, dolores labore ullam autem enim laudantium doloremque atque, laboriosam, excepturi numquam beatae perspiciatis fuga?
-            </p>          
+        <div class="row row-cols-2 row-cols-md-3 g-4 w-75 mx-auto">
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+              </div>
+          </div>       
       </main>         
-      <footer class="footer p-2 container-fluid" id="page-footer">
-        <div class="row d-flex justify-content-between">
+      <footer class="footer p-2 w-100 container-fluid" id="page-footer">
+        <div class="row w-100 d-flex justify-content-between">
             <ul class="col-2 d-flex">
                 <li class="nav-item d-inline-block">
                     <a class="nav-link" href="#">
@@ -80,7 +107,7 @@
                     </a>
                 </li>            
             </ul>
-            <ul class="col-2 d-flex text-end">            
+            <ul class="col-2 d-flex justify-content-end">            
                 <li class="nav-item d-inline-block">
                     <a class="nav-link" href="about.html">
                         About Us
