about page modified

--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
     </div>
   </nav>     
       <main class="container-fluid m-0 p-0" id="main-content">      
-        <div class="row w-100">         
-           <div class="col m-0 p-0">
+        <div class="row w-100 m-0 p-0">         
+           <div class="col p-0">
                <div class="overflow-hidden" id="about-header">                    
                </div>              
            </div>
