--- a/search.html
+++ b/search.html
@@ -10,6 +10,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">        
     <link href="assets/css/site.css" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -52,7 +53,7 @@
             </div>
             <!-- list group  -->
             <div class="row mb-5">
-                <div class="dropdown col-3">
+                <div class="dropdown col-4">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Filters
@@ -65,7 +66,7 @@
                         <li><button class="dropdown-item" data-filter="watch" type="button">Watch</button></li>
                     </ul>
                 </div>
-                <div class="btn-group col-3">
+                <div class="btn-group col-2">
                     <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Order By
@@ -87,7 +88,7 @@
                     <button class="buy-btn">Buy Now</button>
                 </div>
                 <div class="product text-center col-lg-3 col-md-4 col-12 bag">
-                    <img class="img-fluid mb-3" src="./assets/images/product/bag-2.jpg" alt="">
+                    <img class="img-fluid mb-3" src="./assets/images/product/bag-1.png" alt="">
                     <h5 class='p-name'>Women Bag</h5>
                     <h4 class="p-price">$65.00</h4>
                     <button class="buy-btn">Buy Now</button>
