local storage access improved

--- a/store.html
+++ b/store.html
@@ -47,19 +47,19 @@
                     <form action="#" id="newItemForm">
                         <div class="mb-3">
                           <label for="itemName" class="form-label">Name</label>
-                          <input class="form-control" id="itemName" name="itemName" aria-describedby="itemName">                      
+                          <input class="form-control" id="itemName" name="itemName" aria-describedby="itemName" required>                      
                         </div>
                         <div class="mb-3">
                             <label for="itemDescription" class="form-label">Description</label>
-                            <textarea class="form-control" id="itemDescription" name="itemDescription" aria-describedby="itemDescription"></textarea>   
+                            <textarea class="form-control" id="itemDescription" name="itemDescription" aria-describedby="itemDescription" required></textarea>   
                         </div>
                         <div class="mb-3">
                             <label for="itemImgUrl" class="form-label">Image URL</label>
-                            <input class="form-control" id="itemImgUrl" name="itemImgUrl" aria-describedby="itemImgUrl">      
+                            <input class="form-control" id="itemImgUrl" name="itemImgUrl" aria-describedby="itemImgUrl" required>      
                         </div>  
                         <div class="mb-3">
                             <label for="itemPrice" class="form-label">Price</label>
-                            <input type="number" class="form-control" id="itemPrice" name="itemPrice" aria-describedby="itemPrice">      
+                            <input type="number" class="form-control" id="itemPrice" name="itemPrice" aria-describedby="itemPrice" required>      
                         </div>                 
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
